feat:[server/clinet] :- cloudinary setup and profile editing more option, -> submitting vendor datas or main documents to the server

--- a/server/package.json
+++ b/server/package.json
@@ -26,8 +26,10 @@
     "@types/mocha": "^10.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.19.12",
     "@types/nodemailer": "^7.0.1",
+    "@types/streamifier": "^0.1.2",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "chai": "^5.3.1",
@@ -44,6 +46,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
@@ -54,9 +57,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "redis": "^5.8.2",
     "reflect-metadata": "^0.2.2",
+    "streamifier": "^0.1.1",
     "tsconfig-paths": "^4.2.0",
     "typescript-eslint": "^8.44.1",
     "winston": "^3.17.0",
