--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,11 @@
     "pretier": "^0.0.1",
     "prettier": "^3.6.2",
     "react": "^19.1.1",
+    "react-cropper": "^2.3.3",
     "react-dom": "^19.1.1",
     "react-easy-crop": "^5.5.3",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "recharts": "^3.2.1",
     "redux-persist": "^6.0.0"
